# childrens-speech-recognition-runtime

./: .env  .gitignore  justfile  pyproject.toml
metric/: score.py
output/: val_canary_qwen.json
src/: eval.py  main.py  prepare_data.py  salm_train.py  test.py  train.py
src/conf/: salm.yaml
src/lib/: canary_qwen.py  parakeet.py
